salesforce-migration/force-app/main/default/objects/Bouquet_Order_Item__c/Bouquet_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Bouquet Order Item</label>
    <pluralLabel>Bouquet Order Items</pluralLabel>
    <nameField>
        <displayFormat>ITEM-{000000}</displayFormat>
        <label>Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>