salesforce-migration/force-app/main/default/objects/Bouquet_Order_Item__c/fields/Bouquet_Order__c.field-meta.xml
<CustomField>
    <fullName>Bouquet_Order__c</fullName>
    <label>Bouquet Order</label>
    <referenceTo>Bouquet_Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>