salesforce-migration/force-app/main/default/objects/Bouquet_Order_Item__c/fields/Hours_Required__c.field-meta.xml
<CustomField>
    <fullName>Hours_Required__c</fullName>
    <label>Hours Required</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>