salesforce-migration/force-app/main/default/objects/Bouquet_Order_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bouquet Order Items</relationshipLabel>
    <relationshipName>Bouquet_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>