salesforce-migration/force-app/main/default/objects/Bouquet_Order_Item__c/fields/Production_Hours__c.field-meta.xml
<CustomField>
    <fullName>Production_Hours__c</fullName>
    <label>Production Hours</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <defaultValue>0.5</defaultValue>
</CustomField>